--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_TOKEN=ZD4xbaeVbaYXM2sacxsco29Znwb
-TABLE_ID=tblQeDHmXOUPmXBI
-APP_ID=cli_a68e594411fcd00d
-APP_SECRET=KX6b7vZp42VjPmwu2aI0KcvxVg2bdS60
+APP_TOKEN=
+TABLE_ID=
+APP_ID=
+APP_SECRET=
